crates/reinhardt-urls/routers-macros/tests/ui/fail/consecutive_parameters.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: consecutive parameters without separator
	let _path = path!("/users/{id}{name}/");
}
